--- a/styles/Login/Login.module.css
+++ b/styles/Login/Login.module.css
@@ -1,5 +1,17 @@
-@media only screen and(max-width:400px) {   
-    .container{
+.btn {
+    display: block;
+    margin: 2;
+    font-size: 20px;
+    color: whit;
+}
+
+.btn:hover {
+    background-color: #DBB95E;
+}
+
+
+@media only screen and(max-width:400px) {
+    .container {
         width: 270px;
     }
 }
