--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,8 @@ body {
       'Arial', sans-serif;
     margin: 0 auto;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 
 a, button {
